1.jdk更新到17及适配 2.SpringBoot版本更新到3.x 3.SpringCloud&Alibaba版本更新到2022.x及更新对应的组件(Nacos、Seata等) 4.引入Spring Authorization Server认证授权 5.SpringCloudGateway集成Spring Authorization Server 6.新增用户名密码+验证码授权模式 7.[登录、登出、令牌管理、登录日志、客户端管理]等功能重新适配Spring Authorization Server 8.更新文档、脚本